fix: add pve and pvp refactor
