# BattleShip.Models/Domain/GameMode.cs
@@ -1,0 +1,7 @@
+namespace BattleShip.Models.Domain;
+
+public enum GameMode
+{
+    VsComputer,
+    VsPlayer
+}
